--- a/webdev/bootstrap_study_01/index.html
+++ b/webdev/bootstrap_study_01/index.html
@@ -1,28 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+  <!-- Bootstrap CSS -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
-    <title>Document</title>
+  <title>Document</title>
 </head>
 
 
 <body>
-  
+
   <nav class="navbar navbar-expand-lg bg-dark navbar-dark p-4">
 
     <a class="navbar-brand" href="">tindog</a>
 
-    <button type="button" class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#navbar-tindog-toggler" aria-controls="navbar-tindog-toggler"
-    aria-expanded="false" aria-label="Toggle navagation">
+    <button type="button" class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#navbar-tindog-toggler"
+      aria-controls="navbar-tindog-toggler" aria-expanded="false" aria-label="Toggle navagation">
       <span class="navbar-toggler-icon"></span>
     </button>
-    
+
     <div class="collapse navbar-collapse" id="navbar-tindog-toggler">
       <ul class="navbar-nav ms-auto">
         <li class="nav-item">
@@ -33,11 +35,11 @@
         </li>
         <li class="nav-item">
           <a class="nav-link" href="">Download</a>
-        </li>      
-      </ul>  
+        </li>
+      </ul>
     </div>
   </nav>
-    
+
 
 
 
@@ -59,10 +61,10 @@
   <button class="btn btn-lg btn-outline-dark">Hello World</button>
 
   <!-- Option 1: Bootstrap Bundle with Popper -->
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+    crossorigin="anonymous"></script>
 
 </body>
+
 </html>
-
-
-
