create buttons in white space simon game

--- a/webdev/simonGame01/index.html
+++ b/webdev/simonGame01/index.html
@@ -10,8 +10,6 @@
 </head>
 
 <body>
-  <h1>Simon Game</h1>
-
   <div class="game-body">
     <div class="simon-button blue-button"></div>
     <div class="simon-button red-button"></div>
@@ -20,7 +18,16 @@
     <div class="horizontal-line"></div>
     <div class="vertical-line"></div>
     <div class="internal-body"></div>
-    <div class="white-body"></div>
+    <div class="white-body">
+      <div class="simon-name-text">simon</div>
+      <div class="text-in-white-body start-text">start</div>
+      <div class="text-in-white-body strict-text">strict</div>
+      <div class="text-in-white-body reset-text">reset</div>
+      <div class="button-in-white-body green-body-button"></div>
+      <div class="button-in-white-body red-body-button"></div>
+      <div class="button-in-white-body yellow-body-button"></div>
+    </div>
+
   </div>
 
   <!-- <div style="height: 200px; width: 200px; background-color: blue; border-bottom-left-radius:100%;">
