--- a/webdev/simonGame01/index.html
+++ b/webdev/simonGame01/index.html
@@ -26,6 +26,7 @@
       <div class="button-in-white-body green-body-button"></div>
       <div class="button-in-white-body red-body-button"></div>
       <div class="button-in-white-body yellow-body-button"></div>
+      <div class="points-counter-white-body text-counter-white-body">--</div>
     </div>
 
   </div>
