--- a/webdev/marioLikeGame01/index.html
+++ b/webdev/marioLikeGame01/index.html
@@ -10,12 +10,16 @@
 </head>
 
 <body>
-  <div class="mario-div">
-    <img src="images/mario1.png" alt="mario1" class="mario-img">
+
+  <div id="the-terrain">
+    <!--  -->
   </div>
-  <div class="ground-terrain-div">
-    <img src="images/groundTerrain01.png" alt="groundTerrain01" class="terrain-img">
+
+  <div id="mario-player">
+    <!--  -->
   </div>
+
+  <script src="index.js"></script>
 </body>
 
 </html>
